[tool.poetry]
name = "riddlebase"
version = "0.1.0"
description = "A Web Platform for logic puzzle games"
license = "MIT"
authors = ["Daniel Brown <djbrown@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Django = "^3.1.2"
uvicorn = "^0.12.2"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
poethepoet = "^0.9.0"
pytest = "^5.2"
selenium = "^3.141.0"
sauceclient = "^1.0.0"
rope = "^0.18.0"
mypy = "^0.790"
autopep8 = "^1.5.4"
pylint = "^2.6.0"
pylint-django = "^2.3.0"
bandit = "^1.6.2"
flake8 = "^3.8.4"
pylama = "^7.7.1"
# prospector = "^1.3.1"
coverage = "^5.3"
codacy-coverage = "^1.3.11"
codecov = "^2.1.10"
coveralls = "^2.1.2"
safety = "^1.9.0"
dparse = "^0.5.1"
pip-licenses = "^3.0.0"
ptpython = "^3.0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
riddlebase  = "./manage.py runserver"
test        = "./manage.py test"
coverage    = "coverage run --branch --source=. --omit=*/migrations/* ./manage.py test"
attributions = { shell = "pip-licenses -au --from classifier -f csv > ATTRIBUTIONS.csv" }
delmig = { shell = "find . -path \"*/migrations/*.py\" -not -name \"__init__.py\" -delete" }
